# py-algorithms

./: README.rst  setup.cfg  setup.py
adt/queues/: queue.py
adt/stacks/: stack.py
algorithms/py/: __init__.py
algorithms/py/adt/queues/: queue.py
algorithms/py/adt/stacks/: stack.py
